implemeneted basic nav and hero structure

--- a/index.html
+++ b/index.html
@@ -9,5 +9,32 @@
       src="https://kit.fontawesome.com/49f337f749.js"
       crossorigin="anonymous"></script>
   </head>
-  <body class="w-full bg-pageBg"></body>
+  <body class="w-full bg-pageBg">
+    <!-- Header section start -->
+    <header class="">
+      <nav class="flex justify-between text-yellow-300 bg-transparent py-4">
+        <!-- Nav buttons start -->
+        <ul class="flex flex-row">
+          <li><a class="px-3 py-2" href=""></a>Home</li>
+          <li><a class="px-3 py-2" href=""></a>Services</li>
+          <li><a class="px-3 py-2" href=""></a>Products</li>
+          <li><a class="px-3 py-2" href=""></a>About Us</li>
+        </ul>
+        <!-- Nav buttons end -->
+        <!-- Sign Up Start -->
+        <a href="">Sign up</a>
+        <!-- Sign up End -->
+      </nav>
+    </header>
+    <!-- Header section end -->
+    <!-- Hero section start -->
+    <section class="">
+      <div class="flex justify-center">
+        <img
+          src="./src/assets/images/Hero/Hero.png"
+          alt="Hero - Modern House Design" />
+      </div>
+    </section>
+    <!-- Hero section end -->
+  </body>
 </html>
