added some basic styling, linked some pages to index (About, Products, Services)

--- a/index.html
+++ b/index.html
@@ -9,32 +9,65 @@
       src="https://kit.fontawesome.com/49f337f749.js"
       crossorigin="anonymous"></script>
   </head>
-  <body class="w-full bg-pageBg">
-    <!-- Header section start -->
-    <header class="">
-      <nav class="flex justify-between text-yellow-300 bg-transparent py-4">
-        <!-- Nav buttons start -->
-        <ul class="flex flex-row">
-          <li><a class="px-3 py-2" href=""></a>Home</li>
-          <li><a class="px-3 py-2" href=""></a>Services</li>
-          <li><a class="px-3 py-2" href=""></a>Products</li>
-          <li><a class="px-3 py-2" href=""></a>About Us</li>
-        </ul>
-        <!-- Nav buttons end -->
-        <!-- Sign Up Start -->
-        <a href="">Sign up</a>
-        <!-- Sign up End -->
-      </nav>
-    </header>
-    <!-- Header section end -->
-    <!-- Hero section start -->
-    <section class="">
-      <div class="flex justify-center">
-        <img
-          src="./src/assets/images/Hero/Hero.png"
-          alt="Hero - Modern House Design" />
-      </div>
+  <body class="bg-slate-800 flex flex-col items-center m-5">
+    <!-- Container start-->
+    <section class="bg-slate-700 m-5 p-8 rounded-xl">
+      <!-- Header section start -->
+      <header>
+        <nav
+          class="flex justify-between w-[993px] text-yellow-400 bg-transparent py-4">
+          <!-- Nav buttons start -->
+          <ul class="flex flex-row">
+            <li>
+              <a
+                class="px-5 py-2 hover:border-t-4 border-yellow-500 focus::border-t-4 focus:border-yellow-500 ms-2"
+                href="./src/pages/../../index.html"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a
+                class="px-5 py-2 hover:border-t-4 border-yellow-500 ms-2"
+                href="./src/pages/Services.html"
+                >Services</a
+              >
+            </li>
+            <li>
+              <a
+                class="px-5 py-2 hover:border-t-4 border-yellow-500 ms-2"
+                href="./src/pages/Products.html"
+                >Products</a
+              >
+            </li>
+            <li>
+              <a
+                class="px-5 py-2 hover:border-t-4 border-yellow-500 ms-2"
+                href="./src/pages/About.html"
+                >About Us</a
+              >
+            </li>
+          </ul>
+          <!-- Nav buttons end -->
+
+          <!-- Sign Up Start -->
+          <a class="bg-yellow-500 text-black rounded-lg px-5 py-2" href=""
+            >Sign up</a
+          >
+          <!-- Sign up End -->
+        </nav>
+      </header>
+      <!-- Header section end -->
+      <!-- Hero section start -->
+      <section class="">
+        <div class="">
+          <img
+            class="rounded-2xl"
+            src="./src/assets/images/Hero/Hero.png"
+            alt="Hero - Modern House Design" />
+        </div>
+      </section>
+      <!-- Hero section end -->
     </section>
-    <!-- Hero section end -->
+    <!-- Container end -->
   </body>
 </html>
