--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
       <!-- Header section start -->
       <header>
         <nav
+          role="navigation"
           class="flex justify-between w-[993px] text-yellow-400 bg-transparent py-4">
           <!-- Nav buttons start -->
           <ul class="flex flex-row">
             <li>
               <a
-                class="px-5 py-2 hover:border-t-4 border-yellow-500 focus::border-t-4 focus:border-yellow-500 ms-2"
+                class="px-5 py-2 hover:border-t-4 border-yellow-500 ms-2"
                 href="./src/pages/../../index.html"
                 >Home</a
               >
@@ -57,13 +58,27 @@
         </nav>
       </header>
       <!-- Header section end -->
+
       <!-- Hero section start -->
-      <section class="">
-        <div class="">
-          <img
-            class="rounded-2xl"
-            src="./src/assets/images/Hero/Hero.png"
-            alt="Hero - Modern House Design" />
+      <section
+        role="Modern House Design Hero"
+        class="bg-[url('/src/assets/images/Hero/Hero.png')] w-full h-[760px] object-cover rounded-xl flex justify-center items-center">
+        <div
+          class="w-[800px] h-[300px] bg-transparent border-2 border-slate-400 rounded-2xl p-2">
+          <h1 class="font-sans text-6xl text-slate-300 pt-4 text-center">
+            Building <code class="text-yellow-500">the Future</code>
+          </h1>
+          <p class="text-neutral-100 text-center">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+            minus repudiandae fuga laboriosam mollitia quae unde porro repellat
+            praesentium cupiditate.
+          </p>
+          <div class="w-full h-[40px] flex justify-center">
+            <button
+              class="text-white border-2 border-slate-100 rounded-2xl px-3 bg-transparent hover:bg-yellow-500 hover:text-black">
+              Build your dreamhouse now
+            </button>
+          </div>
         </div>
       </section>
       <!-- Hero section end -->
