added blur background to hero section)

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
       src="https://kit.fontawesome.com/49f337f749.js"
       crossorigin="anonymous"></script>
   </head>
-  <body class="bg-slate-800 flex flex-col items-center m-5">
+
+  <body class="bg-slate-900 flex flex-col items-center m-5">
     <!-- Container start-->
-    <section class="bg-slate-700 m-5 p-8 rounded-xl">
+    <section class="bg-slate-800 m-5 p-8 rounded-xl">
       <!-- Header section start -->
       <header>
         <nav
@@ -51,7 +52,9 @@
           <!-- Nav buttons end -->
 
           <!-- Sign Up Start -->
-          <a class="bg-yellow-500 text-black rounded-lg px-5 py-2" href=""
+          <a
+            class="bg-yellow-500 text-black rounded-lg px-5 py-2"
+            href="./src/pages/Sign-up.html"
             >Sign up</a
           >
           <!-- Sign up End -->
@@ -64,18 +67,18 @@
         role="Modern House Design Hero"
         class="bg-[url('/src/assets/images/Hero/Hero.png')] w-full h-[760px] object-cover rounded-xl flex justify-center items-center">
         <div
-          class="w-[800px] h-[300px] bg-transparent border-2 border-slate-400 rounded-2xl p-2">
+          class="w-[800px] h-[300px] bg-transparent/20 backdrop-blur-sm border-2 border-slate-400 rounded-2xl p-2">
           <h1 class="font-sans text-6xl text-slate-300 pt-4 text-center">
             Building <code class="text-yellow-500">the Future</code>
           </h1>
-          <p class="text-neutral-100 text-center">
+          <p class="text-neutral-100 text-center mb-5 mt-5">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
             minus repudiandae fuga laboriosam mollitia quae unde porro repellat
             praesentium cupiditate.
           </p>
-          <div class="w-full h-[40px] flex justify-center">
+          <div class="w-full h-[60px] flex justify-center">
             <button
-              class="text-white border-2 border-slate-100 rounded-2xl px-3 bg-transparent hover:bg-yellow-500 hover:text-black">
+              class="text-white border-2 border-slate-100 rounded-2xl px-3 bg-transparent hover:bg-yellow-500 hover:text-black mt-5">
               Build your dreamhouse now
             </button>
           </div>
