--- a/src/pages/Login.html
+++ b/src/pages/Login.html
@@ -55,7 +55,7 @@
           <a
             class="bg-yellow-500 text-black rounded-lg px-5 py-2"
             href="./src/pages/Sign-up.html"
-            >Sign in</a
+            >Sign up</a
           >
           <!-- Sign up End -->
         </nav>
