--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
           <ul class="flex flex-row phone:hidden smallTablet:flex">
             <li>
               <a
-                class="px-5 py-2 hover:border-t-4 border-yellow-500 ms-2"
+                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-xl"
                 href="./src/pages/../../index.html"
                 >Home</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 hover:border-t-4 border-yellow-500 ms-2"
+                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-xl"
                 href="./src/pages/Services.html"
                 >Services</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 hover:border-t-4 border-yellow-500 ms-2"
+                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-xl"
                 href="./src/pages/Products.html"
                 >Products</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 hover:border-t-4 border-yellow-500 ms-2"
+                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-xl"
                 href="./src/pages/About.html"
                 >About Us</a
               >
@@ -54,17 +54,56 @@
 
           <!-- Sign Up Start -->
           <a
-            class="bg-yellow-500 text-black rounded-lg px-5 py-2"
+            class="bg-yellow-500 text-black phone:active:bg-black phone:active:text-yellow-500 rounded-lg px-5 py-2"
             href="./src/pages/Sign-up.html"
             >Sign up</a
           >
           <!-- Sign up End -->
-          <a
-            class="smallTablet:hidden text-white text-2xl rounded-lg px-5 py-2"
-            href="./src/pages/Sign-up.html"
-            ><i class="fa-solid fa-bars"></i
-          ></a>
-          <!-- Phone menu -->
+
+          <!-- Mobile menu starts-->
+          <div class="relative smallTablet:hidden">
+            <input class="peer hidden" type="checkbox" id="menuToggle" />
+
+            <label
+              class="fa-solid fa-bars text-white text-2xl rounded-lg px-5 py-2"
+              for="menuToggle"></label>
+
+            <div
+              class="hidden peer-checked:block absolute top-full right-0 bg-yellow-500 text-black w-[100px] rounded-lg">
+              <ul class="list-none m-0 p-0">
+                <li>
+                  <a
+                    href="./index.html"
+                    class="block p-4 active:bg-black active:text-yellow-500 active:rounded-t-lg"
+                    >Home</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./src/pages/Services.html"
+                    class="block p-4 active:bg-black active:text-yellow-500"
+                    >Services</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./src/pages/Products.html"
+                    class="block p-4 active:bg-black active:text-yellow-500"
+                    >Products</a
+                  >
+                </li>
+
+                <li>
+                  <a
+                    href="./src/pages/About.html"
+                    class="block p-4 active:bg-black active:text-yellow-500 active:rounded-b-lg"
+                    >About</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- Mobile menu ends -->
         </nav>
       </header>
       <!-- Header section end -->
@@ -86,7 +125,7 @@
           </p>
           <div class="w-full h-[60px] flex justify-center">
             <button
-              class="border-2 border-slate-100 rounded-2xl px-3 phone:bg-yellow-500 phone:text-black laptop:hover:bg-yellow-500 laptop:hover:text-black mt-5 laptop:text-white laptop:bg-transparent">
+              class="border-2 border-slate-100 rounded-2xl px-3 phone:active:bg-black phone:active:text-yellow-500 phone:bg-yellow-500 phone:text-black laptop:hover:bg-yellow-500 laptop:hover:text-black mt-5 laptop:text-white laptop:bg-transparent">
               Build your dreamhouse now
             </button>
           </div>
