implem,ented carousel style side buttons, added more assets to products page

--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
           <ul class="flex flex-row phone:hidden smallTablet:flex">
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-xl"
-                href="./src/pages/../../index.html"
+                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                href="/src/pages/../../index.html"
                 >Home</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-xl"
-                href="./src/pages/Services.html"
+                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                href="/src/pages/Services.html"
                 >Services</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-xl"
-                href="./src/pages/Products.html"
+                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                href="/src/pages/Products.html"
                 >Products</a
               >
             </li>
             <li>
               <a
-                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-xl"
-                href="./src/pages/About.html"
+                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                href="/src/pages/About.html"
                 >About Us</a
               >
             </li>
@@ -55,17 +55,17 @@
           <!-- Sign Up Start -->
           <a
             class="bg-yellow-500 text-black phone:active:bg-black phone:active:text-yellow-500 rounded-lg px-5 py-2"
-            href="./src/pages/Sign-up.html"
+            href="/src/pages/Sign-up.html"
             >Sign up</a
           >
           <!-- Sign up End -->
 
           <!-- Mobile menu starts-->
-          <div class="relative smallTablet:hidden">
+          <div class="relative smallTablet:hidden z-50">
             <input class="peer hidden" type="checkbox" id="menuToggle" />
 
             <label
-              class="fa-solid fa-bars text-white text-2xl rounded-lg px-5 py-2"
+              class="fa-solid fa-bars text-white active:text-yellow-500 text-2xl rounded-lg px-5 py-2"
               for="menuToggle"></label>
 
             <div
@@ -126,7 +126,7 @@
           <div class="w-full h-[60px] flex justify-center">
             <button
               class="border-2 border-slate-100 rounded-2xl px-3 phone:active:bg-black phone:active:text-yellow-500 phone:bg-yellow-500 phone:text-black laptop:hover:bg-yellow-500 laptop:hover:text-black mt-5 laptop:text-white laptop:bg-transparent">
-              Build your dreamhouse now
+              <a href="./src/pages/Products.html">Choose your dreamhouse now</a>
             </button>
           </div>
         </div>
