--- a/src/pages/Services.html
+++ b/src/pages/Services.html
@@ -1,11 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="../styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/49f337f749.js"
+      crossorigin="anonymous"></script>
+  </head>
+
+  <body class="bg-slate-900 flex flex-col items-center m-5">
+    <!-- Container start-->
+    <section
+      class="max-w-[1000px] w-full bg-slate-800 smallTablet:mt-10 smallTablet:px-10 smallTablet:py-10 rounded-xl smallPhone:px-4 smallPhone:py-5 smallPhone:m-0">
+      <!-- Header section start -->
+      <header>
+        <nav
+          role="navigation"
+          class="w-full flex justify-between items-center laptop:-w-[768px] text-yellow-400 bg-transparent py-4">
+          <!-- Nav buttons start -->
+          <ul class="flex flex-row phone:hidden smallTablet:flex">
+            <li>
+              <a
+                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                href="/src/pages/../../index.html"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a
+                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                href="/src/pages/Services.html"
+                >Services</a
+              >
+            </li>
+            <li>
+              <a
+                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                href="/src/pages/Products.html"
+                >Products</a
+              >
+            </li>
+            <li>
+              <a
+                class="px-5 py-2 active:border-2 active:rounded-lg laptop:active:border-none laptop:active:text-white laptop:hover:border-t-4 border-yellow-500 ms-2 laptop:text-lg"
+                href="/src/pages/About.html"
+                >About Us</a
+              >
+            </li>
+          </ul>
+          <!-- Nav buttons end -->
+
+          <!-- Sign Up Start -->
+          <a
+            class="bg-yellow-500 text-black phone:active:bg-black phone:active:text-yellow-500 rounded-lg px-5 py-2"
+            href="/src/pages/Sign-up.html"
+            >Sign up</a
+          >
+          <!-- Sign up End -->
+
+          <!-- Mobile menu starts-->
+          <div class="relative smallTablet:hidden">
+            <input class="peer hidden" type="checkbox" id="menuToggle" />
+
+            <label
+              class="fa-solid fa-bars text-white text-2xl rounded-lg px-5 py-2"
+              for="menuToggle"></label>
+
+            <div
+              class="hidden peer-checked:block absolute top-full right-0 bg-yellow-500 text-black w-[100px] rounded-lg">
+              <ul class="list-none m-0 p-0">
+                <li>
+                  <a
+                    href="./index.html"
+                    class="block p-4 active:bg-black active:text-yellow-500 active:rounded-t-lg"
+                    >Home</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./src/pages/Services.html"
+                    class="block p-4 active:bg-black active:text-yellow-500"
+                    >Services</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./src/pages/Products.html"
+                    class="block p-4 active:bg-black active:text-yellow-500"
+                    >Products</a
+                  >
+                </li>
+
+                <li>
+                  <a
+                    href="./src/pages/About.html"
+                    class="block p-4 active:bg-black active:text-yellow-500 active:rounded-b-lg"
+                    >About</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- Mobile menu ends -->
+        </nav>
+      </header>
+      <!-- Header section end -->
+
+      <!-- Hero section start -->
+      <section
+        role="Modern House Design Hero"
+        class="w-full bg-[url('/src/assets/images/Hero/Hero.png')] bg-[center] aspect-square h-[760px] object-cover bg-no-repeat rounded-xl flex justify-center items-center">
+        <div
+          class="max-w-[800px] h-[300px] bg-transparent/40 backdrop-blur border-2 border-slate-400 rounded-2xl p-2">
+          <h1
+            class="font-sans phone:text-3xl smallTablet:text-5xl tablet:text-6xl text-slate-300 pt-4 text-center">
+            Services
+          </h1>
+          <p class="text-neutral-100 text-center mb-5 mt-5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+            minus repudiandae fuga laboriosam mollitia quae unde porro repellat
+            praesentium cupiditate.
+          </p>
+          <div class="w-full h-[60px] flex justify-center">
+            <button
+              class="border-2 border-slate-100 rounded-2xl px-3 phone:active:bg-black phone:active:text-yellow-500 phone:bg-yellow-500 phone:text-black laptop:hover:bg-yellow-500 laptop:hover:text-black mt-5 laptop:text-white laptop:bg-transparent">
+              Build your dreamhouse now
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- Hero section end -->
+    </section>
+    <!-- Container end -->
+  </body>
 </html>
