added about me page

--- a/index.html
+++ b/index.html
@@ -113,15 +113,24 @@
         role="Modern House Design Hero"
         class="w-full bg-[url('/src/assets/images/Hero/Hero.png')] bg-[center] aspect-square h-[760px] object-cover bg-no-repeat rounded-xl flex justify-center items-center">
         <div
-          class="max-w-[800px] h-[300px] bg-transparent/40 backdrop-blur border-2 border-slate-400 rounded-2xl p-2">
+          class="max-w-[800px] h-[400px] bg-transparent/40 backdrop-blur border-2 border-slate-400 rounded-2xl p-2">
           <h1
             class="font-sans phone:text-3xl smallTablet:text-5xl tablet:text-6xl text-slate-300 pt-4 text-center">
             Building <code class="text-yellow-500">the Future</code>
           </h1>
-          <p class="text-neutral-100 text-center mb-5 mt-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-            minus repudiandae fuga laboriosam mollitia quae unde porro repellat
-            praesentium cupiditate.
+          <p class="text-neutral-100 text-md text-center mb-5 mt-5 text-sm">
+            Welcome to the threshold of innovation and design, where we craft
+            not just houses, but futuristic habitats that redefine the essence
+            of home. At our core, we believe in a future where your living space
+            is an extension of your aspirations, a canvas for your dreams. We
+            blend cutting-edge technology with sustainable practices to create
+            spaces that are not only visually stunning but also intelligently
+            responsive to your needs. Each design is a unique symphony of form
+            and function, curated to harmonize with the environment while
+            pushing the boundaries of architectural thought. Join us in this
+            journey to the future, where every home is an avant-garde
+            masterpiece, a sanctuary that anticipates the evolution of modern
+            living.
           </p>
           <div class="w-full h-[60px] flex justify-center">
             <button
