--- a/src/pages/About.html
+++ b/src/pages/About.html
@@ -108,52 +108,41 @@
       </header>
       <!-- Header section end -->
 
-      <!-- Register section start -->
+      <!-- About section starts -->
       <section
         role="Register"
         class="w-full bg-[url('/src/assets/images/Hero/Hero.png')] bg-[center] aspect-square h-[760px] object-cover bg-no-repeat rounded-xl flex justify-center items-center">
         <div
-          class="max-w-[800px] tablet:w-[400px] smallPhone:w-[300px] h-[400px] bg-transparent/40 backdrop-blur border-2 border-slate-400 rounded-2xl p-2">
-          <h1
-            class="font-sans phone:text-xl smallTablet:text-xl tablet:text-2xl text-slate-300 pt-4 text-center">
-            Create account
+          class="max-w-[800px] tablet:w-[800px] smallPhone:w-[600px] h-[400px] bg-transparent/40 backdrop-blur border-2 border-slate-400 rounded-2xl p-4 text-white">
+          <h1 class="text-2xl pb-[20px]">
+            Welcome to
+            <code class="text-yellow-500">Zenith Living Designs</code>
           </h1>
 
-          <div class="flex flex-col text-white text-sm px-5">
-            <label class="ps-3" for="username">First Name</label>
-            <input
-              class="m-3 px-2 rounded-xl text-black"
-              type="text"
-              id="firstname" />
-
-            <label class="ps-3" for="username">Last Name</label>
-            <input
-              class="m-3 px-2 rounded-xl text-black"
-              type="text"
-              id="lastname" />
-
-            <label class="ps-3" for="username">Email</label>
-            <input
-              class="m-3 px-2 rounded-xl text-black"
-              type="email"
-              id="email" />
-
-            <label class="ps-3" for="password">Password</label>
-            <input class="m-3 px-2 rounded-xl text-black" type="password" />
-
-            <label class="ps-3" for="password">Re-type password</label>
-            <input class="m-3 px-2 rounded-xl text-black" type="password" />
-          </div>
-
-          <div class="w-full h-[60px] flex justify-center">
-            <button
-              class="border-2 border-slate-100 rounded-2xl px-5 bg-yellow-500 text-black laptop:hover:bg-black laptop:hover:text-yellow-500 phone:active:bg-black phone:active:text-yellow-500">
-              Register
-            </button>
-          </div>
+          <p class="smallPhone:text-sm laptop:text-md">
+            We are the vanguard of living space evolution, pioneering the
+            integration of state-of-the-art technology with sustainable living.
+            Our company was born out of a passion for innovation and a deep
+            respect for the environment, driven by the vision of creating homes
+            that are not only architecturally advanced but also in harmony with
+            nature. Our team is composed of world-class architects, visionary
+            designers, and skilled engineers who are all united by a shared
+            commitment to excellence and sustainability. We leverage the latest
+            advancements in smart technology, energy efficiency, and
+            eco-friendly materials to construct homes that are intelligent,
+            intuitive, and inspired by the possibilities of tomorrow. Every
+            NexaHabitat home is a testament to our philosophy of 'living ahead',
+            offering unparalleled comfort, cutting-edge design, and a living
+            experience that is truly in tune with the future. We are dedicated
+            to pushing the envelope, challenging the conventional, and setting
+            new benchmarks for luxury and innovation in residential habitats.
+            Join us at NexaHabitat Innovations, where the future of home is
+            being reimagined today. Welcome to the intersection of dream and
+            dwelling.
+          </p>
         </div>
       </section>
-      <!-- Register section end -->
+      <!-- About section ends -->
     </section>
     <!-- Container end -->
   </body>
