--- a/src/pages/Products.html
+++ b/src/pages/Products.html
@@ -113,7 +113,10 @@
         role="Modern House Design Hero"
         class="w-full bg-[url('/src/assets/images/Hero/Hero.png')] bg-[center] aspect-square h-[760px] object-cover bg-no-repeat rounded-xl flex justify-center items-center">
         <div
-          class="relative w-full max-w-[800px] h-[600px] bg-transparent/40 backdrop-blur-3xl border-2 border-slate-400 rounded-2xl p-10 overflow-y-scroll no-scrollbar">
+          class="w-full max-w-[800px] h-[600px] bg-transparent/40 backdrop-blur-lg border-2 border-slate-400 rounded-2xl p-10 overflow-y-scroll no-scrollbar">
+          <div
+            class="relative Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[300px] rounded-xl bg-[url('/src/assets/images/House01.png')] bg-cover bg-center"></div>
+
           <button
             class="absolute top-1 right-1 smallTablet:translate-y-[170px] smallPhone:translate-y-[120px]">
             <i
@@ -126,8 +129,6 @@
               class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500"></i>
           </button>
 
-          <div
-            class="Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[300px] rounded-xl bg-[url('/src/assets/images/House01.png')] bg-cover bg-center"></div>
           <h1 class="text-yellow-400 text-2xl p-2">The Arcadian Curve</h1>
           <p class="text-white p-4">
             Nestled amidst the dense foliage of the Carpathian Mountains, this
@@ -146,15 +147,17 @@
 
           <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
 
-          <!-- <button class="absolute top-1 right-1 translate-y-[250px]">
+          <button
+            class="absolute top-1 right-1 smallTablet:translate-y-[850px] smallPhone:translate-y-[890px]">
             <i
               class="fa-solid fa-square-caret-right text-4xl text-yellow-500"></i>
           </button>
 
-          <button class="absolute top-1 left-1 translate-y-[250px]">
+          <button
+            class="absolute top-1 left-1 smallTablet:translate-y-[850px] smallPhone:translate-y-[890px]">
             <i
               class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500"></i>
-          </button> -->
+          </button>
 
           <div
             class="Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[300px] rounded-xl bg-[url('/src/assets/images/House02.png')] bg-cover bg-center"></div>
@@ -176,15 +179,17 @@
 
           <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
 
-          <!-- <button class="absolute top-1 right-1 translate-y-[250px]">
+          <button
+            class="absolute top-1 right-1 smallTablet:translate-y-[1450px] smallPhone:translate-y-[1590px]">
             <i
               class="fa-solid fa-square-caret-right text-4xl text-yellow-500"></i>
           </button>
 
-          <button class="absolute top-1 left-1 translate-y-[250px]">
+          <button
+            class="absolute top-1 left-1 smallTablet:translate-y-[1450px] smallPhone:translate-y-[1590px]">
             <i
               class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500"></i>
-          </button> -->
+          </button>
 
           <div
             class="Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[300px] rounded-xl bg-[url('/src/assets/images/House03.png')] bg-cover bg-center"></div>
@@ -206,6 +211,36 @@
           </p>
 
           <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
+
+          <button
+            class="absolute top-1 right-1 smallTablet:translate-y-[2120px] smallPhone:translate-y-[2300px]">
+            <i
+              class="fa-solid fa-square-caret-right text-4xl text-yellow-500"></i>
+          </button>
+
+          <button
+            class="absolute top-1 left-1 smallTablet:translate-y-[2120px] smallPhone:translate-y-[2300px]">
+            <i
+              class="fa-solid fa-square-caret-right text-4xl rotate-180 text-yellow-500"></i>
+          </button>
+
+          <div
+            class="Card smallTablet:w-auto smallPhone:h-[200px] smallTablet:h-[400px] rounded-xl bg-[url('/src/assets/images/Hero.png')] bg-cover bg-center"></div>
+          <h1 class="text-yellow-400 text-2xl p-2">Emerald Whisper</h1>
+          <p class="text-white">
+            This architectural marvel, cloaked in the enigmatic hues of
+            twilight, stands as a bold statement of modernity amidst the
+            whispering pines. Its striking contrast of vibrant teal and warm
+            amber lighting creates a visual symphony that is both inviting and
+            awe-inspiring. The sleek, clean lines of the structure are softened
+            by the organic backdrop, presenting an oasis of contemporary design
+            in the heart of nature. Large, unadorned glass panes allow for an
+            immersive experience with the surrounding environment, blurring the
+            boundaries between inside and out. This house is a sanctuary that
+            celebrates the future of residential architecture, promising a
+            retreat that is both intimate and expansively connected to the
+            natural world.
+          </p>
         </div>
       </section>
 
